# ai

./: .gitignore  AGENTS.md  Cargo.toml  Containerfile  Makefile  README.md  deny.toml
.github/: CODEOWNERS
.github/actions/clone-praxis/: action.yml
.github/actions/patch-praxis/: action.yml
.github/workflows/: benchmarks.yaml  ci-status.yaml  codeql.yaml  container.yaml  conventions.yaml  coverage.yaml  documentation.yaml  integration.yaml  msrv.yaml  nightly.yaml  praxis-compat.yaml  publish.yaml  pull-request-hygiene.yaml  release.yaml  supply-chain.yaml  tests.yaml
apis/: Cargo.toml
apis/src/: lib.rs
apis/src/anthropic/messages_format/: config.rs
apis/src/anthropic/to_openai/: request.rs  response.rs
apis/src/classifier/: mod.rs
apis/src/openai/: mod.rs
apis/src/openai/conversations/: filter.rs  handlers.rs  tests.rs
apis/src/openai/responses/: config.rs  mod.rs
apis/src/openai/responses/model_rewrite/: config.rs
apis/src/openai/responses/proxy/: mod.rs  tests.rs
apis/src/openai/responses/rehydrate/: mod.rs  tests.rs
apis/src/openai/responses/store/: filter.rs
apis/src/openai/responses/tool_parse/: config.rs  mod.rs  parser.rs  tests.rs
apis/src/store/: sqlite.rs  tests.rs
apis/src/token_usage/: mod.rs  streaming.rs  tests.rs
core/src/: health.rs  memory.rs
core/src/config/: body_limits.rs  filters.rs  mod.rs  parse.rs
core/src/config/validate/: rules.rs
core/src/config/validate/listener/: rules.rs  timeouts.rs
docs/: architecture.md  benchmarks.md  features.md  proposals.md  quickstart.md
docs/filters/: a2a.md  ai_guardrails.md  anthropic_messages_format.md  anthropic_messages_protocol.md  anthropic_stream_events.md  anthropic_to_openai.md  anthropic_validate.md  mcp.md  model_to_header.md  openai_conversations.md  openai_response_store.md  openai_responses_format.md  openai_responses_model_rewrite.md  openai_responses_rehydrate.md  openai_responses_validate.md  openai_stream_events.md  prompt_enrich.md  reference.md  responses_proxy.md  token_count.md  tool_parse.md
docs/operating/: filter-reference.md
docs/proposals/: 00011_dynamic-configuration-reloading.md  00036_branch-chains.md  00039_tls-certificate-hot-reload.md  00354_responses-api-filters.md  template.md
examples/: README.md
examples/configs/: mcp-stateless-broker.yaml  token-counting.yaml
examples/configs/ai/: mcp-classifier-routing.yaml
examples/configs/ai/openai/responses/: full-flow.yaml  response-store.yaml  responses-routing.yaml
examples/configs/openai/responses/: full-flow.yaml  tool-routing.yaml
examples/configs/payload-processing/: mcp-static-catalog.yaml
examples/configs/protocols/: tcp-timeouts.yaml
filter/: Cargo.toml
filter/ext-proc/: Cargo.toml
filter/ext-proc/src/: duplex.rs  lib.rs  tests.rs
filter/src/: context.rs  lib.rs  registry.rs
filter/src/builtins/: mod.rs
filter/src/builtins/http/: mod.rs
filter/src/builtins/http/ai/: mod.rs
filter/src/builtins/http/ai/openai/: mod.rs
filter/src/builtins/http/ai/store/: mod.rs  postgres.rs  schemas.rs  sqlite.rs  tests.rs  trait_def.rs  types.rs
filter/src/builtins/http/security/guardrails/: config.rs  filter.rs  pii.rs  tests.rs
filter/src/builtins/http/traffic_management/rate_limit/: mod.rs  tests.rs
filter/src/pipeline/: mod.rs  tests.rs
filters/: Cargo.toml
filters/src/: lib.rs  token_usage_headers.rs
filters/src/agentic/a2a/: envelope.rs  mod.rs  tests.rs
filters/src/agentic/mcp/: envelope.rs  mod.rs  protocol.rs
filters/src/agentic/mcp/broker/: config.rs  mod.rs  tests.rs
filters/src/prompt_enrich/: config.rs
filters/src/token_count/: mod.rs  tests.rs
protocol/src/http/pingora/handler/: response_filter.rs
protocol/src/tcp/: mod.rs  tls_setup.rs
server/: Cargo.toml
server/src/: lib.rs  pipelines.rs  server.rs  watcher.rs
tests/conformance/tests/suite/: chunked.rs
tests/conformance/tests/suite/rfcs/: rfc7239.rs  rfc9110.rs  rfc9112.rs
tests/fuzz/: Cargo.toml
tests/fuzz/fuzz_targets/: fuzz_filter_pipeline.rs
tests/integration/: Cargo.toml
tests/integration/fixtures/replay/: README.md
tests/integration/fixtures/replay/claude/: messages-basic.json
tests/integration/fixtures/replay/codex/: responses-basic.json
tests/integration/tests/suite/: a2a.rs  body.rs  body_pipeline.rs  conditions.rs  conversations_rehydrate.rs  failure_mode.rs  filter_composition.rs  filter_metadata.rs  json_body_field.rs  json_rpc.rs  main.rs  mcp.rs  mcp_broker.rs  openai_responses_format.rs  path_rewrite.rs  payload_processing.rs  prompt_enrich.rs  responses_routing.rs  security.rs  stream_buffer_adapter.rs  tool_parse.rs  websocket.rs
tests/integration/tests/suite/adversarial/: header_smuggling.rs  path_traversal.rs
tests/integration/tests/suite/examples/: agentic_routing.rs  anthropic_messages.rs  credential_injection.rs  full_flow.rs  mcp_broker.rs  mod.rs  openai_conversations.rs  openai_response_store.rs  openai_response_store_postgres.rs  openai_responses_format.rs  openai_responses_model_rewrite.rs  openai_responses_validate.rs  openai_stream_events.rs  path_rewriting.rs  payload_processing.rs  prompt_enrichment.rs  rehydrate.rs  responses_proxy.rs  responses_routing.rs  session_replay.rs  test_utils.rs  token_count.rs  token_usage_headers.rs  tool_parse.rs
tests/resilience/tests/suite/: large_payload.rs  throughput_body.rs  throughput_production.rs
tests/schema/: Cargo.toml
tests/schema/tests/suite/: cluster.rs  main.rs
tests/schema/tests/suite/examples/: mod.rs
tests/schema/tests/suite/examples/branching/: conditional_skip_to.rs  cross_chain_flat.rs  multiple_branches.rs  named_chain_ref.rs  reentrance.rs  unconditional_branch.rs
tests/security/tests/suite/: forwarded_headers.rs  header_injection.rs  ip_acl.rs
tests/utils/: Cargo.toml
tests/utils/src/: example_config.rs  lib.rs  proxy.rs  session_replay.rs  sqlite.rs
tests/utils/src/net/: mod.rs
tests/utils/src/net/backend/: echo.rs  mod.rs  simple.rs  specialized.rs
xtask/: Cargo.toml
xtask/src/: echo.rs  filter_docs.rs  main.rs  make_replay_fixture.rs
(+20 files in other folders)
