[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Development task runner for Praxis AI"
license.workspace = true
repository.workspace = true
readme = "../README.md"
publish = false

[lints]
workspace = true

[dependencies]
clap = { workspace = true }
nix = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
praxis-ai = { path = "../server", package = "praxis-ai-proxy" }
praxis-core = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "process", "net", "io-util"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
