[package]
name = "praxis-proxy-ext-proc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Envoy-compatible ext_proc filter for Praxis"
license.workspace = true
repository.workspace = true
readme = "../../README.md"
publish = false

[lib]
name = "praxis_ext_proc"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
praxis-filter = { workspace = true }
prost-types = { workspace = true }
praxis-proto = { workspace = true }
prost-wkt-types = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
sync_wrapper = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
praxis-core = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net"] }
tokio-stream = { workspace = true }
