[package]
name = "praxis-fuzz"
version = "0.0.0"
edition = "2024"
rust-version = "1.94"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
bytes = "1.11.1"
http = "1.4.2"
libfuzzer-sys = "0.4.9"
praxis-tls = { path = "../../tls", package = "praxis-proxy-tls" }
praxis-core = { path = "../../core", package = "praxis-proxy-core" }
praxis-filter = { path = "../../filter", package = "praxis-proxy-filter" }
serde_yaml = { package = "yaml_serde", version = "0.10.4" }
tokio = { version = "1.52.3", features = ["rt"] }

[[bin]]
name = "fuzz_sni"
path = "fuzz_targets/fuzz_sni.rs"
doc = false

[[bin]]
name = "fuzz_path_sanitize"
path = "fuzz_targets/fuzz_path_sanitize.rs"
doc = false

[[bin]]
name = "fuzz_config_parse"
path = "fuzz_targets/fuzz_config_parse.rs"
doc = false

[[bin]]
name = "fuzz_filter_pipeline"
path = "fuzz_targets/fuzz_filter_pipeline.rs"
doc = false

[[bin]]
name = "fuzz_cidr_parse"
path = "fuzz_targets/fuzz_cidr_parse.rs"
doc = false

[[bin]]
name = "fuzz_header_name"
path = "fuzz_targets/fuzz_header_name.rs"
doc = false

[[bin]]
name = "fuzz_body_buffer"
path = "fuzz_targets/fuzz_body_buffer.rs"
doc = false
